--- a/docs/4.21.md
+++ b/docs/4.21.md
@@ -8,4 +8,4 @@
 
 ###今日遇到的bug总结
 
-####在写回到顶部的时候，鼠标滚动到大于等于600的时候显示 被商品图覆盖了 然后是以为没有设置权重 用z-index给个比商品图大的值就可以了
+####在写回到顶部的时候，鼠标滚动到大于等于600的时候显示 被商品图覆盖了 然后是因为没有设置权重 用z-index给个比商品图大的值就可以了
